tests/neg/if-error.scala
val x: Int =
  if ??? then System.in.read()  // error
